es搜索引擎，有BUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.redis.password=
 spring.datasource.username=root
 spring.datasource.password=111111
 file.upload.dir=${user.dir}/upload
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
